# portfolio-data-quality-pydantic-and-tdd

./: 404.html  README.md  index.html  inferred_schema.json  mkdocs.yml  my_duckdb.db  objects.inv  pyproject.toml  schema_crm.py
.github/workflows/: CI.yaml
app/: etl.py  etl_infer_schema.py  read_duckb.py  schema.py  schema_email.py
data_contract/: index.html
docs/: data_contract.md  index.md  tests.md  transformations.md
search/: search_index.json
sql/: create_table_products_bronze.sql  create_table_products_bronze_email.sql  insert_into_table_bronze.sql  insert_into_table_bronze_email.sql  insert_wrong_values_into_tabela_bronze.sql
tests/: index.html  test_func_etl.py
transformations/: index.html
